@@ -1,3 +1,5 @@
 Version 0.22 (TBA):
 	* QPID-4466: qpid::messaging::Duration now supports multiplication
 	* QPID-4416: Messages with embedded nulls won't break on getContentPtr
+	* QPID-4505: Provides unit tests for Address, Duration and Message
+
